parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    AND
    ASIGNACION
    ASIGNACIONDIVISION
    ASIGNACIONEXPONENCIAL
    ASIGNACIONMODULO
    ASIGNACIONPRODUCTO
    ASIGNACIONRESTA
    ASIGNACIONSUMA
    BREAK
    CADENATEXTO
    CARACTERX
    CLASS
    CONCATSTR
    CONTROLX
    DEF
    ELSIF
    ENSURE
    EQUALS
    ESCAPES
    ESPACIOBLANCO
    FICHAS
    IGUALDADESTRICTA
    METACONTROLX
    MOD
    MODULE
    NEGACION
    NEXT
    NIL
    NOT
    NOTACIONHEXA
    NOTACIONOCTAL
    OR
    PESTANAVERTICAL
    REDO
    RESCUE
    RETORNO
    RETRY
    RETURN
    SALTOLINEA
    SALTOPAGINA
    SELF
    SPACESHIP
    SUPER
    UNDEF
    YIELD
    _FILE_
    _LINE_

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> impresion
Rule 2     sentencias -> argumento
Rule 3     sentencias -> puts
Rule 4     sentencias -> IF LPAREN condicional RPAREN sentencias END
Rule 5     sentencias -> IF LPAREN condicional RPAREN THEN sentencias END
Rule 6     sentencias -> IF LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END
Rule 7     sentencias -> UNLESS LPAREN condicional RPAREN sentencias END
Rule 8     sentencias -> UNLESS LPAREN condicional RPAREN THEN sentencias END
Rule 9     sentencias -> UNLESS LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END
Rule 10    empty -> <empty>
Rule 11    elseifanidado -> ELSEIF sentencias
Rule 12    elseifanidado -> ELSEIF sentencias elseifanidado
Rule 13    elseifanidado -> empty
Rule 14    sentencias -> UNTIL LPAREN condicional RPAREN DO sentencias END
Rule 15    sentencias -> UNTIL condicional DO sentencias END
Rule 16    sentencias -> UNTIL LPAREN condicional RPAREN sentencias END
Rule 17    sentencias -> UNTIL condicional sentencias END
Rule 18    sentencias -> CASE expression whenMuchos END
Rule 19    sentencias -> CASE expression whenMuchos ELSE sentencias END
Rule 20    whenMuchos -> WHEN rangeYespression sentencias
Rule 21    whenMuchos -> WHEN rangeYespression sentencias whenMuchos
Rule 22    whenMuchos -> empty
Rule 23    rangeYespression -> range
Rule 24    rangeYespression -> expression
Rule 25    sentencias -> WHILE LPAREN condicional RPAREN DO sentencias END
Rule 26    sentencias -> WHILE condicional DO sentencias END
Rule 27    sentencias -> WHILE LPAREN condicional RPAREN sentencias END
Rule 28    sentencias -> WHILE condicional sentencias END
Rule 29    sentencias -> FOR ID IN iterable sentencias END
Rule 30    sentencias -> FOR ID IN iterable DO sentencias END
Rule 31    impresion -> PRINT LPAREN argumento RPAREN
Rule 32    impresion -> PRINT argumento
Rule 33    impresion -> PRINT LPAREN RPAREN
Rule 34    impresion -> PRINT
Rule 35    puts -> PUTS LPAREN argumento RPAREN
Rule 36    puts -> PUTS argumento
Rule 37    puts -> PUTS LPAREN RPAREN
Rule 38    puts -> PUTS
Rule 39    argumento -> expression
Rule 40    argumento -> cadena
Rule 41    argumento -> condicional
Rule 42    iterable -> range
Rule 43    range -> expression DOBLEPUNTO expression
Rule 44    condicional -> boolean
Rule 45    condicional -> boolOp
Rule 46    boolean -> TRUE
Rule 47    boolean -> FALSE
Rule 48    boolOp -> factor MAYORQUE factor
Rule 49    boolOp -> factor MENORQUE factor
Rule 50    boolOp -> factor MAYORIGUALQUE factor
Rule 51    boolOp -> factor MENORIGUALQUE factor
Rule 52    boolOp -> factor IGUALQUE factor
Rule 53    boolOp -> factor DIFERENTEQUE factor
Rule 54    boolOp -> factor ANDLOGICO factor
Rule 55    boolOp -> factor ORLOGICO factor
Rule 56    cadena -> STRING
Rule 57    cadena -> STRINGCC
Rule 58    expression -> expression PLUS term
Rule 59    expression -> expression MINUS term
Rule 60    expression -> term
Rule 61    term -> term TIMES factor
Rule 62    term -> term DIVIDE factor
Rule 63    term -> factor
Rule 64    factor -> NUMBER
Rule 65    factor -> ID
Rule 66    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ALIAS                : 
AND                  : 
ANDLOGICO            : 54
ASIGNACION           : 
ASIGNACIONDIVISION   : 
ASIGNACIONEXPONENCIAL : 
ASIGNACIONMODULO     : 
ASIGNACIONPRODUCTO   : 
ASIGNACIONRESTA      : 
ASIGNACIONSUMA       : 
BREAK                : 
CADENATEXTO          : 
CARACTERX            : 
CASE                 : 18 19
CLASS                : 
CONCATSTR            : 
CONTROLX             : 
DEF                  : 
DIFERENTEQUE         : 53
DIVIDE               : 62
DO                   : 14 15 25 26 30
DOBLEPUNTO           : 43
ELSE                 : 6 9 19
ELSEIF               : 11 12
ELSIF                : 
END                  : 4 5 6 7 8 9 14 15 16 17 18 19 25 26 27 28 29 30
ENSURE               : 
EQUALS               : 
ESCAPES              : 
ESPACIOBLANCO        : 
FALSE                : 47
FICHAS               : 
FOR                  : 29 30
ID                   : 29 30 65
IF                   : 4 5 6
IGUALDADESTRICTA     : 
IGUALQUE             : 52
IN                   : 29 30
LPAREN               : 4 5 6 7 8 9 14 16 25 27 31 33 35 37 66
MAYORIGUALQUE        : 50
MAYORQUE             : 48
MENORIGUALQUE        : 51
MENORQUE             : 49
METACONTROLX         : 
MINUS                : 59
MOD                  : 
MODULE               : 
NEGACION             : 
NEXT                 : 
NIL                  : 
NOT                  : 
NOTACIONHEXA         : 
NOTACIONOCTAL        : 
NUMBER               : 64
OR                   : 
ORLOGICO             : 55
PESTANAVERTICAL      : 
PLUS                 : 58
PRINT                : 31 32 33 34
PUTS                 : 35 36 37 38
REDO                 : 
RESCUE               : 
RETORNO              : 
RETRY                : 
RETURN               : 
RPAREN               : 4 5 6 7 8 9 14 16 25 27 31 33 35 37 66
SALTOLINEA           : 
SALTOPAGINA          : 
SELF                 : 
SPACESHIP            : 
STRING               : 56
STRINGCC             : 57
SUPER                : 
THEN                 : 5 8
TIMES                : 61
TRUE                 : 46
UNDEF                : 
UNLESS               : 7 8 9
UNTIL                : 14 15 16 17
WHEN                 : 20 21
WHILE                : 25 26 27 28
YIELD                : 
_FILE_               : 
_LINE_               : 
error                : 

Nonterminals, with rules where they appear

argumento            : 2 31 32 35 36
boolOp               : 45
boolean              : 44
cadena               : 40
condicional          : 4 5 6 7 8 9 14 15 16 17 25 26 27 28 41
elseifanidado        : 6 9 12
empty                : 13 22
expression           : 18 19 24 39 43 43 58 59 66
factor               : 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 61 62 63
impresion            : 1
iterable             : 29 30
puts                 : 3
range                : 23 42
rangeYespression     : 20 21
sentencias           : 4 5 6 6 7 8 9 9 11 12 14 15 16 17 19 20 21 25 26 27 28 29 30 0
term                 : 58 59 60 61 62
whenMuchos           : 18 19 21

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . impresion
    (2) sentencias -> . argumento
    (3) sentencias -> . puts
    (4) sentencias -> . IF LPAREN condicional RPAREN sentencias END
    (5) sentencias -> . IF LPAREN condicional RPAREN THEN sentencias END
    (6) sentencias -> . IF LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END
    (7) sentencias -> . UNLESS LPAREN condicional RPAREN sentencias END
    (8) sentencias -> . UNLESS LPAREN condicional RPAREN THEN sentencias END
    (9) sentencias -> . UNLESS LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END
    (14) sentencias -> . UNTIL LPAREN condicional RPAREN DO sentencias END
    (15) sentencias -> . UNTIL condicional DO sentencias END
    (16) sentencias -> . UNTIL LPAREN condicional RPAREN sentencias END
    (17) sentencias -> . UNTIL condicional sentencias END
    (18) sentencias -> . CASE expression whenMuchos END
    (19) sentencias -> . CASE expression whenMuchos ELSE sentencias END
    (25) sentencias -> . WHILE LPAREN condicional RPAREN DO sentencias END
    (26) sentencias -> . WHILE condicional DO sentencias END
    (27) sentencias -> . WHILE LPAREN condicional RPAREN sentencias END
    (28) sentencias -> . WHILE condicional sentencias END
    (29) sentencias -> . FOR ID IN iterable sentencias END
    (30) sentencias -> . FOR ID IN iterable DO sentencias END
    (31) impresion -> . PRINT LPAREN argumento RPAREN
    (32) impresion -> . PRINT argumento
    (33) impresion -> . PRINT LPAREN RPAREN
    (34) impresion -> . PRINT
    (39) argumento -> . expression
    (40) argumento -> . cadena
    (41) argumento -> . condicional
    (35) puts -> . PUTS LPAREN argumento RPAREN
    (36) puts -> . PUTS argumento
    (37) puts -> . PUTS LPAREN RPAREN
    (38) puts -> . PUTS
    (58) expression -> . expression PLUS term
    (59) expression -> . expression MINUS term
    (60) expression -> . term
    (56) cadena -> . STRING
    (57) cadena -> . STRINGCC
    (44) condicional -> . boolean
    (45) condicional -> . boolOp
    (61) term -> . term TIMES factor
    (62) term -> . term DIVIDE factor
    (63) term -> . factor
    (46) boolean -> . TRUE
    (47) boolean -> . FALSE
    (48) boolOp -> . factor MAYORQUE factor
    (49) boolOp -> . factor MENORQUE factor
    (50) boolOp -> . factor MAYORIGUALQUE factor
    (51) boolOp -> . factor MENORIGUALQUE factor
    (52) boolOp -> . factor IGUALQUE factor
    (53) boolOp -> . factor DIFERENTEQUE factor
    (54) boolOp -> . factor ANDLOGICO factor
    (55) boolOp -> . factor ORLOGICO factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 5
    UNLESS          shift and go to state 8
    UNTIL           shift and go to state 9
    CASE            shift and go to state 10
    WHILE           shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 15
    PUTS            shift and go to state 17
    STRING          shift and go to state 19
    STRINGCC        shift and go to state 20
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 14
    LPAREN          shift and go to state 6

    sentencias                     shift and go to state 1
    impresion                      shift and go to state 2
    argumento                      shift and go to state 3
    puts                           shift and go to state 4
    condicional                    shift and go to state 7
    expression                     shift and go to state 11
    cadena                         shift and go to state 16
    term                           shift and go to state 18
    boolean                        shift and go to state 21
    boolOp                         shift and go to state 22
    factor                         shift and go to state 23

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> impresion .

    $end            reduce using rule 1 (sentencias -> impresion .)
    END             reduce using rule 1 (sentencias -> impresion .)
    ELSEIF          reduce using rule 1 (sentencias -> impresion .)
    ELSE            reduce using rule 1 (sentencias -> impresion .)
    WHEN            reduce using rule 1 (sentencias -> impresion .)


state 3

    (2) sentencias -> argumento .

    $end            reduce using rule 2 (sentencias -> argumento .)
    END             reduce using rule 2 (sentencias -> argumento .)
    ELSEIF          reduce using rule 2 (sentencias -> argumento .)
    ELSE            reduce using rule 2 (sentencias -> argumento .)
    WHEN            reduce using rule 2 (sentencias -> argumento .)


state 4

    (3) sentencias -> puts .

    $end            reduce using rule 3 (sentencias -> puts .)
    END             reduce using rule 3 (sentencias -> puts .)
    ELSEIF          reduce using rule 3 (sentencias -> puts .)
    ELSE            reduce using rule 3 (sentencias -> puts .)
    WHEN            reduce using rule 3 (sentencias -> puts .)


state 5

    (4) sentencias -> IF . LPAREN condicional RPAREN sentencias END
    (5) sentencias -> IF . LPAREN condicional RPAREN THEN sentencias END
    (6) sentencias -> IF . LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END

    LPAREN          shift and go to state 27


state 6

    (66) factor -> LPAREN . expression RPAREN
    (58) expression -> . expression PLUS term
    (59) expression -> . expression MINUS term
    (60) expression -> . term
    (61) term -> . term TIMES factor
    (62) term -> . term DIVIDE factor
    (63) term -> . factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 14
    LPAREN          shift and go to state 6

    expression                     shift and go to state 28
    term                           shift and go to state 18
    factor                         shift and go to state 29

state 7

    (41) argumento -> condicional .

    $end            reduce using rule 41 (argumento -> condicional .)
    END             reduce using rule 41 (argumento -> condicional .)
    ELSEIF          reduce using rule 41 (argumento -> condicional .)
    ELSE            reduce using rule 41 (argumento -> condicional .)
    WHEN            reduce using rule 41 (argumento -> condicional .)
    RPAREN          reduce using rule 41 (argumento -> condicional .)


state 8

    (7) sentencias -> UNLESS . LPAREN condicional RPAREN sentencias END
    (8) sentencias -> UNLESS . LPAREN condicional RPAREN THEN sentencias END
    (9) sentencias -> UNLESS . LPAREN condicional RPAREN sentencias elseifanidado ELSE sentencias END

    LPAREN          shift and go to state 30


state 9

    (14) sentencias -> UNTIL . LPAREN condicional RPAREN DO sentencias END
    (15) sentencias -> UNTIL . condicional DO sentencias END
    (16) sentencias -> UNTIL . LPAREN condicional RPAREN sentencias END
    (17) sentencias -> UNTIL . condicional sentencias END
    (44) condicional -> . boolean
    (45) condicional -> . boolOp
    (46) boolean -> . TRUE
    (47) boolean -> . FALSE
    (48) boolOp -> . factor MAYORQUE factor
    (49) boolOp -> . factor MENORQUE factor
    (50) boolOp -> . factor MAYORIGUALQUE factor
    (51) boolOp -> . factor MENORIGUALQUE factor
    (52) boolOp -> . factor IGUALQUE factor
    (53) boolOp -> . factor DIFERENTEQUE factor
    (54) boolOp -> . factor ANDLOGICO factor
    (55) boolOp -> . factor ORLOGICO factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 31
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 14

    condicional                    shift and go to state 32
    boolean                        shift and go to state 21
    boolOp                         shift and go to state 22
    factor                         shift and go to state 33

state 10

    (18) sentencias -> CASE . expression whenMuchos END
    (19) sentencias -> CASE . expression whenMuchos ELSE sentencias END
    (58) expression -> . expression PLUS term
    (59) expression -> . expression MINUS term
    (60) expression -> . term
    (61) term -> . term TIMES factor
    (62) term -> . term DIVIDE factor
    (63) term -> . factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 26
    ID              shift and go to state 14
    LPAREN          shift and go to state 6

    expression                     shift and go to state 34
    term                           shift and go to state 18
    factor                         shift and go to state 29

state 11

    (39) argumento -> expression .
    (58) expression -> expression . PLUS term
    (59) expression -> expression . MINUS term

    $end            reduce using rule 39 (argumento -> expression .)
    END             reduce using rule 39 (argumento -> expression .)
    ELSEIF          reduce using rule 39 (argumento -> expression .)
    ELSE            reduce using rule 39 (argumento -> expression .)
    WHEN            reduce using rule 39 (argumento -> expression .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36


state 12

    (25) sentencias -> WHILE . LPAREN condicional RPAREN DO sentencias END
    (26) sentencias -> WHILE . condicional DO sentencias END
    (27) sentencias -> WHILE . LPAREN condicional RPAREN sentencias END
    (28) sentencias -> WHILE . condicional sentencias END
    (44) condicional -> . boolean
    (45) condicional -> . boolOp
    (46) boolean -> . TRUE
    (47) boolean -> . FALSE
    (48) boolOp -> . factor MAYORQUE factor
    (49) boolOp -> . factor MENORQUE factor
    (50) boolOp -> . factor MAYORIGUALQUE factor
    (51) boolOp -> . factor MENORIGUALQUE factor
    (52) boolOp -> . factor IGUALQUE factor
    (53) boolOp -> . factor DIFERENTEQUE factor
    (54) boolOp -> . factor ANDLOGICO factor
    (55) boolOp -> . factor ORLOGICO factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 37
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 14

    condicional                    shift and go to state 38
    boolean                        shift and go to state 21
    boolOp                         shift and go to state 22
    factor                         shift and go to state 33

state 13

    (29) sentencias -> FOR . ID IN iterable sentencias END
    (30) sentencias -> FOR . ID IN iterable DO sentencias END

    ID              shift and go to state 39


state 14

    (65) factor -> ID .

    MAYORQUE        reduce using rule 65 (factor -> ID .)
    MENORQUE        reduce using rule 65 (factor -> ID .)
    MAYORIGUALQUE   reduce using rule 65 (factor -> ID .)
    MENORIGUALQUE   reduce using rule 65 (factor -> ID .)
    IGUALQUE        reduce using rule 65 (factor -> ID .)
    DIFERENTEQUE    reduce using rule 65 (factor -> ID .)
    ANDLOGICO       reduce using rule 65 (factor -> ID .)
    ORLOGICO        reduce using rule 65 (factor -> ID .)
    TIMES           reduce using rule 65 (factor -> ID .)
    DIVIDE          reduce using rule 65 (factor -> ID .)
    PLUS            reduce using rule 65 (factor -> ID .)
    MINUS           reduce using rule 65 (factor -> ID .)
    $end            reduce using rule 65 (factor -> ID .)
    RPAREN          reduce using rule 65 (factor -> ID .)
    WHEN            reduce using rule 65 (factor -> ID .)
    END             reduce using rule 65 (factor -> ID .)
    ELSE            reduce using rule 65 (factor -> ID .)
    ELSEIF          reduce using rule 65 (factor -> ID .)
    DOBLEPUNTO      reduce using rule 65 (factor -> ID .)
    IF              reduce using rule 65 (factor -> ID .)
    UNLESS          reduce using rule 65 (factor -> ID .)
    UNTIL           reduce using rule 65 (factor -> ID .)
    CASE            reduce using rule 65 (factor -> ID .)
    WHILE           reduce using rule 65 (factor -> ID .)
    FOR             reduce using rule 65 (factor -> ID .)
    PRINT           reduce using rule 65 (factor -> ID .)
    PUTS            reduce using rule 65 (factor -> ID .)
    STRING          reduce using rule 65 (factor -> ID .)
    STRINGCC        reduce using rule 65 (factor -> ID .)
    TRUE            reduce using rule 65 (factor -> ID .)
    FALSE           reduce using rule 65 (factor -> ID .)
    NUMBER          reduce using rule 65 (factor -> ID .)
    ID              reduce using rule 65 (factor -> ID .)
    LPAREN          reduce using rule 65 (factor -> ID .)
    DO              reduce using rule 65 (factor -> ID .)


state 15

    (31) impresion -> PRINT . LPAREN argumento RPAREN
    (32) impresion -> PRINT . argumento
    (33) impresion -> PRINT . LPAREN RPAREN
    (34) impresion -> PRINT .
    (39) argumento -> . expression
    (40) argumento -> . cadena
    (41) argumento -> . condicional
    (58) expression -> . expression PLUS term
    (59) expression -> . expression MINUS term
    (60) expression -> . term
    (56) cadena -> . STRING
    (57) cadena -> . STRINGCC
    (44) condicional -> . boolean
    (45) condicional -> . boolOp
    (61) term -> . term TIMES factor
    (62) term -> . term DIVIDE factor
    (63) term -> . factor
    (46) boolean -> . TRUE
    (47) boolean -> . FALSE
    (48) boolOp -> . factor MAYORQUE factor
    (49) boolOp -> . factor MENORQUE factor
    (50) boolOp -> . factor MAYORIGUALQUE factor
    (51) boolOp -> . factor MENORIGUALQUE factor
    (52) boolOp -> . factor IGUALQUE factor
    (53) boolOp -> . factor DIFERENTEQUE factor
    (54) boolOp -> . factor ANDLOGICO factor
    (55) boolOp -> . factor ORLOGICO factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 40
    $end            reduce using rule 34 (impresion -> PRINT .)
    END             reduce using rule 34 (impresion -> PRINT .)
    ELSEIF          reduce using rule 34 (impresion -> PRINT .)
    ELSE            reduce using rule 34 (impresion -> PRINT .)
    WHEN            reduce using rule 34 (impresion -> PRINT .)
    STRING          shift and go to state 19
    STRINGCC        shift and go to state 20
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 14

    argumento                      shift and go to state 41
    expression                     shift and go to state 11
    cadena                         shift and go to state 16
    condicional                    shift and go to state 7
    term                           shift and go to state 18
    boolean                        shift and go to state 21
    boolOp                         shift and go to state 22
    factor                         shift and go to state 23

state 16

    (40) argumento -> cadena .

    $end            reduce using rule 40 (argumento -> cadena .)
    END             reduce using rule 40 (argumento -> cadena .)
    ELSEIF          reduce using rule 40 (argumento -> cadena .)
    ELSE            reduce using rule 40 (argumento -> cadena .)
    WHEN            reduce using rule 40 (argumento -> cadena .)
    RPAREN          reduce using rule 40 (argumento -> cadena .)


state 17

    (35) puts -> PUTS . LPAREN argumento RPAREN
    (36) puts -> PUTS . argumento
    (37) puts -> PUTS . LPAREN RPAREN
    (38) puts -> PUTS .
    (39) argumento -> . expression
    (40) argumento -> . cadena
    (41) argumento -> . condicional
    (58) expression -> . expression PLUS term
    (59) expression -> . expression MINUS term
    (60) expression -> . term
    (56) cadena -> . STRING
    (57) cadena -> . STRINGCC
    (44) condicional -> . boolean
    (45) condicional -> . boolOp
    (61) term -> . term TIMES factor
    (62) term -> . term DIVIDE factor
    (63) term -> . factor
    (46) boolean -> . TRUE
    (47) boolean -> . FALSE
    (48) boolOp -> . factor MAYORQUE factor
    (49) boolOp -> . factor MENORQUE factor
    (50) boolOp -> . factor MAYORIGUALQUE factor
    (51) boolOp -> . factor MENORIGUALQUE factor
    (52) boolOp -> . factor IGUALQUE factor
    (53) boolOp -> . factor DIFERENTEQUE factor
    (54) boolOp -> . factor ANDLOGICO factor
    (55) boolOp -> . factor ORLOGICO factor
    (64) factor -> . NUMBER
    (65) factor -> . ID
    (66) factor -> . LPAREN expression RPAREN

    LPAREN          shift and go to state 42
    $end            reduce using rule 38 (puts -> PUTS .)
    END             reduce using rule 38 (puts -> PUTS .)
    ELSEIF          reduce using rule 38 (puts -> PUTS .)
    ELSE            reduce using rule 38 (puts -> PUTS .)
    WHEN            reduce using rule 38 (puts -> PUTS .)
    STRING          shift and go to state 19
    STRINGCC        shift and go to state 20
    TRUE            shift and go to state 24
    FALSE           shift and go to state 25
    NUMBER          shift and go to state 26
    ID              shift and go to state 14

    argumento                      shift and go to state 43
    expression                     shift and go to state 11
    cadena                         shift and go to state 16
    condicional                    shift and go to state 7
    term                           shift and go to state 18
    boolean                        shift and go to state 21
    boolOp                         shift and go to state 22
    factor                         shift and go to state 23

state 18

    (60) expression -> term .
    (61) term -> term . TIMES factor
    (62) term -> term . DIVIDE factor

    PLUS            reduce using rule 60 (expression -> term .)
    MINUS           reduce using rule 60 (expression -> term .)
    $end            reduce using rule 60 (expression -> term .)
    RPAREN          reduce using rule 60 (expression -> term .)
    WHEN            reduce using rule 60 (expression -> term .)
    END             reduce using rule 60 (expression -> term .)
    ELSE            reduce using rule 60 (expression -> term .)
    ELSEIF          reduce using rule 60 (expression -> term .)
    DOBLEPUNTO      reduce using rule 60 (expression -> term .)
    IF              reduce using rule 60 (expression -> term .)
    UNLESS          reduce using rule 60 (expression -> term .)
    UNTIL           reduce using rule 60 (expression -> term .)
    CASE            reduce using rule 60 (expression -> term .)
    WHILE           reduce using rule 60 (expression -> term .)
    FOR             reduce using rule 60 (expression -> term .)
    PRINT           reduce using rule 60 (expression -> term .)
    PUTS            reduce using rule 60 (expression -> term .)
    STRING          reduce using rule 60 (expression -> term .)
    STRINGCC        reduce using rule 60 (expression -> term .)
    TRUE            reduce using rule 60 (expression -> term .)
    FALSE           reduce using rule 60 (expression -> term .)
    NUMBER          reduce using rule 60 (expression -> term .)
    ID              reduce using rule 60 (expression -> term .)
    LPAREN          reduce using rule 60 (expression -> term .)
    DO              reduce using rule 60 (expression -> term .)
    TIMES           shift and go to state 44
    DIVIDE          shift and go to state 45


state 19

    (56) cadena -> STRING .

    $end            reduce using rule 56 (cadena -> STRING .)
    END             reduce using rule 56 (cadena -> STRING .)
    ELSEIF          reduce using rule 56 (cadena -> STRING .)
    ELSE            reduce using rule 56 (cadena -> STRING .)
    WHEN            reduce using rule 56 (cadena -> STRING .)
    RPAREN          reduce using rule 56 (cadena -> STRING .)


state 20

    (57) cadena -> STRINGCC .

    $end            reduce using rule 57 (cadena -> STRINGCC .)
    END             reduce using rule 57 (cadena -> STRINGCC .)
    ELSEIF          reduce using rule 57 (cadena -> STRINGCC .)
    ELSE            reduce using rule 57 (cadena -> STRINGCC .)
    WHEN            reduce using rule 57 (cadena -> STRINGCC .)
    RPAREN          reduce using rule 57 (cadena -> STRINGCC .)


state 21

    (44) condicional -> boolean .

    $end            reduce using rule 44 (condicional -> boolean .)
    DO              reduce using rule 44 (condicional -> boolean .)
    IF              reduce using rule 44 (condicional -> boolean .)
    UNLESS          reduce using rule 44 (condicional -> boolean .)
    UNTIL           reduce using rule 44 (condicional -> boolean .)
    CASE            reduce using rule 44 (condicional -> boolean .)
    WHILE           reduce using rule 44 (condicional -> boolean .)
    FOR             reduce using rule 44 (condicional -> boolean .)
    PRINT           reduce using rule 44 (condicional -> boolean .)
    PUTS            reduce using rule 44 (condicional -> boolean .)
    STRING          reduce using rule 44 (condicional -> boolean .)
    STRINGCC        reduce using rule 44 (condicional -> boolean .)
    TRUE            reduce using rule 44 (condicional -> boolean .)
    FALSE           reduce using rule 44 (condicional -> boolean .)
    NUMBER          reduce using rule 44 (condicional -> boolean .)
    ID              reduce using rule 44 (condicional -> boolean .)
    LPAREN          reduce using rule 44 (condicional -> boolean .)
    END             reduce using rule 44 (condicional -> boolean .)
    ELSEIF          reduce using rule 44 (condicional -> boolean .)
    ELSE            reduce using rule 44 (condicional -> boolean .)
    WHEN            reduce using rule 44 (condicional -> boolean .)
    RPAREN          reduce using rule 44 (condicional -> boolean .)


state 22

    (45) condicional -> boolOp .

    $end            reduce using rule 45 (condicional -> boolOp .)
    DO              reduce using rule 45 (condicional -> boolOp .)
    IF              reduce using rule 45 (condicional -> boolOp .)
    UNLESS          reduce using rule 45 (condicional -> boolOp .)
    UNTIL           reduce using rule 45 (condicional -> boolOp .)
    CASE            reduce using rule 45 (condicional -> boolOp .)
    WHILE           reduce using rule 45 (condicional -> boolOp .)
    FOR             reduce using rule 45 (condicional -> boolOp .)
    PRINT           reduce using rule 45 (condicional -> boolOp .)
    PUTS            reduce using rule 45 (condicional -> boolOp .)
    STRING          reduce using rule 45 (condicional -> boolOp .)
    STRINGCC        reduce using rule 45 (condicional -> boolOp .)
    TRUE            reduce using rule 45 (condicional -> boolOp .)
    FALSE           reduce using rule 45 (condicional -> boolOp .)
    NUMBER          reduce using rule 45 (condicional -> boolOp .)
    ID              reduce using rule 45 (condicional -> boolOp .)
    LPAREN          reduce using rule 45 (condicional -> boolOp .)
    END             reduce using rule 45 (condicional -> boolOp .)
    ELSEIF          reduce using rule 45 (condicional -> boolOp .)
    ELSE            reduce using rule 45 (condicional -> boolOp .)
    WHEN            reduce using rule 45 (condicional -> boolOp .)
    RPAREN          reduce using rule 45 (condicional -> boolOp .)


state 23

    (63) term -> factor .
    (48) boolOp -> factor . MAYORQUE factor
    (49) boolOp -> factor . MENORQUE factor
    (50) boolOp -> factor . MAYORIGUALQUE factor
    (51) boolOp -> factor . MENORIGUALQUE factor
    (52) boolOp -> factor . IGUALQUE factor
    (53) boolOp -> factor . DIFERENTEQUE factor
    (54) boolOp -> factor . ANDLOGICO factor
    (55) boolOp -> factor . ORLOGICO factor

    TIMES           reduce using rule 63 (term -> factor .)
    DIVIDE          reduce using rule 63 (term -> factor .)
    PLUS            reduce using rule 63 (term -> factor .)
    MINUS           reduce using rule 63 (term -> factor .)
    $end            reduce using rule 63 (term -> factor .)
    END             reduce using rule 63 (term -> factor .)
    ELSEIF          reduce using rule 63 (term -> factor .)
    ELSE            reduce using rule 63 (term -> factor .)
    WHEN            reduce using rule 63 (term -> factor .)
    RPAREN          reduce using rule 63 (term -> factor .)
    MAYORQUE        shift and go to state 46
    MENORQUE        shift and go to state 47
    MAYORIGUALQUE   shift and go to state 48
    MENORIGUALQUE   shift and go to state 49
    IGUALQUE        shift and go to state 50
    DIFERENTEQUE    shift and go to state 51
    ANDLOGICO       shift and go to state 52
    ORLOGICO        shift and go to state 53


state 24

    (46) boolean -> TRUE .

    $end            reduce using rule 46 (boolean -> TRUE .)
    DO              reduce using rule 46 (boolean -> TRUE .)
    IF              reduce using rule 46 (boolean -> TRUE .)
    UNLESS          reduce using rule 46 (boolean -> TRUE .)
    UNTIL           reduce using rule 46 (boolean -> TRUE .)
    CASE            reduce using rule 46 (boolean -> TRUE .)
    WHILE           reduce using rule 46 (boolean -> TRUE .)
    FOR             reduce using rule 46 (boolean -> TRUE .)
    PRINT           reduce using rule 46 (boolean -> TRUE .)
    PUTS            reduce using rule 46 (boolean -> TRUE .)
    STRING          reduce using rule 46 (boolean -> TRUE .)
    STRINGCC        reduce using rule 46 (boolean -> TRUE .)
    TRUE            reduce using rule 46 (boolean -> TRUE .)
    FALSE           reduce using rule 46 (boolean -> TRUE .)
    NUMBER          reduce using rule 46 (boolean -> TRUE .)
    ID              reduce using rule 46 (boolean -> TRUE .)
    LPAREN          reduce using rule 46 (boolean -> TRUE .)
    END             reduce using rule 46 (boolean -> TRUE .)
    ELSEIF          reduce using rule 46 (boolean -> TRUE .)
    ELSE            reduce using rule 46 (boolean -> TRUE .)
    WHEN            reduce using rule 46 (boolean -> TRUE .)
    RPAREN          reduce using rule 46 (boolean -> TRUE .)


state 25

    (47) boolean -> FALSE .
